src/cmd/snapshots/gob__cmd__up__tests__cloud_init_basic.snap
---
source: src/cmd/up.rs
assertion_line: 819
expression: output
---
#cloud-config
timezone: UTC
users:
  - name: testuser
    sudo: ALL=(ALL) NOPASSWD:ALL
    shell: /bin/zsh
    ssh_authorized_keys:
      - ssh-ed25519 AAAA

ssh_pwauth: false

package_update: true
packages:
  - git
  - stow
  - zsh
  - tmux
  - mosh
  - just

runcmd:
  - sed -i 's/^PermitRootLogin .*/PermitRootLogin no/' /etc/ssh/sshd_config
  - systemctl restart sshd
  - curl -fsSL https://tailscale.com/install.sh | sh
  - tailscale up --auth-key=tskey-auth-xxx --ssh
  - su - testuser -c "curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash"
  - su - testuser -c "/home/testuser/.cargo/bin/cargo-binstall --no-confirm --strategies crate-meta-data jj-cli"
