src/cmd/snapshots/gob__cmd__up__tests__cloud_init_full.snap
---
source: src/cmd/up.rs
expression: output
---
#cloud-config
timezone: UTC
users:
  - name: testuser
    sudo: ALL=(ALL) NOPASSWD:ALL
    shell: /bin/zsh
    ssh_authorized_keys:
      - ssh-ed25519 AAAA

ssh_pwauth: false

package_update: true
packages:
  - git
  - stow
  - zsh
  - tmux
  - mosh
  - just
  - socat
  - bubblewrap
  - nodejs
  - build-essential
  - rustup

runcmd:
  - sed -i 's/^PermitRootLogin .*/PermitRootLogin no/' /etc/ssh/sshd_config
  - systemctl restart sshd
  - curl -fsSL https://tailscale.com/install.sh | sh
  - tailscale up --auth-key=tskey-auth-xxx --ssh
  - su - testuser -c 'rustup default stable'
  - su - testuser -c 'curl -fsSL https://claude.ai/install.sh | sh'
